[gd_scene load_steps=8 format=3 uid="uid://db6fief5iki75"]

[ext_resource type="Script" path="res://SubScenes/options.gd" id="1_v1o1j"]
[ext_resource type="FontVariation" uid="uid://b2yt1q3r57s2o" path="res://Fonts/BaseFont.tres" id="2_dxrjl"]
[ext_resource type="PackedScene" uid="uid://c8au2jai7ic1" path="res://SubScenes/volumn_slider.tscn" id="2_l8rjj"]

[sub_resource type="LabelSettings" id="LabelSettings_aaoyb"]
font = ExtResource("2_dxrjl")

[sub_resource type="LabelSettings" id="LabelSettings_5bjot"]
font = ExtResource("2_dxrjl")

[sub_resource type="Theme" id="Theme_qxmyu"]
default_font = ExtResource("2_dxrjl")

[sub_resource type="Theme" id="Theme_lsdhm"]
default_font = ExtResource("2_dxrjl")

[node name="Options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1o1j")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.156863, 0.760784, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -120.0
offset_right = 183.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -81.5
offset_right = 147.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volumn"
label_settings = SubResource("LabelSettings_aaoyb")
horizontal_alignment = 1

[node name="MusicVolumnSlider" parent="Panel/VBoxContainer" instance=ExtResource("2_l8rjj")]
layout_mode = 2
bus_name = "Music"

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volumn"
label_settings = SubResource("LabelSettings_5bjot")
horizontal_alignment = 1

[node name="SFXVolumnSlider" parent="Panel/VBoxContainer" instance=ExtResource("2_l8rjj")]
layout_mode = 2
bus_name = "SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -43.0
offset_right = -39.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="GoMain" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_qxmyu")
text = "Go Main"

[node name="ButtonBack" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_lsdhm")
text = "Back"

[connection signal="pressed" from="Panel/HBoxContainer/GoMain" to="." method="_on_go_main_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
